--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body
     display:flex;
     padding:10px;
     margin:10px;
-    background-color: lightgray;
+    background-color: lightpink;
 }
 
 .assignment img
