--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,61 @@
-body
+;body
 {
-    background-color: darkred;
+    background-color: #FFF;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.assignments
+{
+    display: flex;
+    flex-wrap:wrap;
+}
 .assignment
 {
-    display:flex;
+    width: 22%;
     padding:10px;
     margin:10px;
+    padding:20px 10px;  
     background-color: lightpink;
+    border-radius: 5px;
 }
 
 .assignment img
 {
     width:200px;
-    padding:10px;
+    margin:10px;
+    border:4px solid #FFF;
+    display:block;
+    margin:auto;
+}
+
+.assignment img:hover
+{
+    border:4px dashed #F25C69;
 }
 
 h1
 {
-    color: white;
+    color: lightpink;
     text-align: center;
+}
+
+h1:hover
+{
+    color:#F25C75;
+}
+
+h2
+{
+    text-align:center; 
+}
+
+a
+{
+    text-decoration: none;
+    color: #FFF;
+}
+
+a:hover
+{
+    color: #F25C69;
 }
